@@ -2,6 +2,9 @@ Jython NEWS
 
 For more details, please see https://hg.python.org/jython
 
+  Bugs fixed
+   - [ 2347 ] failures in test_import_pep328 when run with -m
+
 Jython 2.7rc3
   Bugs fixed
    - [ 2326 ] Java's weakly consistent iteration of ConcurrentMap is compatible with mutation
